kube01/apps/common/traefik/templates.none/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http
  namespace: common
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.test.nf.lab`)
      middlewares:
        - name: dashboard-auth
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
